# AUTOSR-SDSE

./:  AGENTS.md  .gitignore  AGENTS.md  AUTOSR-SDSE  GEMINI.md  pytest.ini  unified_research_pipeline.py
.gemini/: settings.json
docs/: agent-protected-files.md  research_tools_fit_analysis.md  spec-development-walkthrough-zh.md  spec-kit-guide.md  specify-setup-notes.md  using-sdse-uv-env.md
logs/: 2025-09-26.md  2025-09-27.md  2025-09-28.md  2025-09-29.md  2025-09-30.md  2025-10-01.md  2025-10-02.md  2025-10-04.md  2025-10-05.md  2025-10-06.md  2025-12-18.md  2025-12-19.md  2025-12-20.md  2025-12-21.md  2025-12-27.md  2025-12-28.md  2025-12-29.md  2025-12-30.md  2025-12-31.md  2026-01-01.md  2026-01-02.md  2026-01-03.md  2026-01-05.md  2026-01-06.md  2026-01-07.md  2026-01-08.md  2026-01-09.md  2026-01-10.md  2026-01-11.md  2026-01-12.md  2026-01-13.md  2026-01-14.md  2026-01-15.md  2026-01-17.md  2026-01-18.md  2026-01-19.md  2026-01-20.md  2026-01-21.md  2026-01-24.md  2026-01-25.md  (+2 more)
scripts/: check_doc_links.py  collect_title_abstracts.py  collect_title_abstracts_priority.py  print_oracle_f1_tables.py  run_topic_discrete_audio_tokens.sh  run_topic_discrete_audio_tokens_filter_seed.sh  run_topic_discrete_audio_tokens_full_codex_cli.sh  run_topic_discrete_audio_tokens_titlepaper_only.sh  run_topic_on_the_landscape_spoken_language_models.sh  run_topic_on_the_landscape_spoken_language_models_titlepaper_criteria_review.sh  run_topic_titlepaper_criteria_review.sh  snowball_iterate.py  sync_docs.sh  (+2 more)
sdse-uv/: pyproject.toml
sdse-uv/src/sdse_uv/: __init__.py
(+603 files in other folders)
