[project]
name = "sdse-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sologa", email = "syasyunjyo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "codex>=1.8.14",
    "dotenv>=0.9.9",
    "openai>=1.108.1",
    "requests>=2.32.5",
    "specify-cli",
]

[project.scripts]
sdse-uv = "sdse_uv:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
specify-cli = { git = "https://github.com/github/spec-kit.git" }

[dependency-groups]
dev = [
    "codex>=1.8.14",
    "pytest>=8.4.2",
]
